텍스트 수정

--- a/main.html
+++ b/main.html
@@ -47,9 +47,9 @@
 
                         <ul>
                             <li>
-                                <h3><a href=""><i class='bx bx-dashboard'></i>대쉬보드</a></h3>
+                                <h3><a href=""><i class='bx bx-dashboard'></i>대시보드</a></h3>
                                 <ul>
-                                    <li><a href="">대쉬보드</a></li>
+                                    <li><a href="">대시보드</a></li>
                                 </ul>
                             </li>
                             <li>
@@ -161,7 +161,7 @@
         <div id="content">
 
             <section class="tabs">
-                <input type="radio" name="tabs" id="tabs1" checked><label for="tabs1">대쉬보드<button>닫기<i class='bx bx-x'></i></button></label>
+                <input type="radio" name="tabs" id="tabs1" checked><label for="tabs1">대시보드<button>닫기<i class='bx bx-x'></i></button></label>
                 <input type="radio" name="tabs" id="tabs2"><label for="tabs2">두번째탭<button>닫기<i class='bx bx-x'></i></button></label>
                 <input type="radio" name="tabs" id="tabs3"><label for="tabs3">세번째탭 입니다 입니다<button>닫기<i class='bx bx-x'></i></button></label>
                 <input type="radio" name="tabs" id="tabs4"><label for="tabs4">네번째<button>닫기<i class='bx bx-x'></i></button></label>
