--- a/main.html
+++ b/main.html
@@ -183,7 +183,7 @@
 
             <section class="view">
 
-                <h2 class="stitle"><i class='bx bx-dashboard'></i>대쉬보드</h2>
+                <h2 class="stitle"><i class='bx bx-dashboard'></i>대시보드</h2>
 
 
 
