아이콘 경로 수정

--- a/main.html
+++ b/main.html
@@ -46,7 +46,7 @@
                 <nav id="main-menu">
 
                         <ul>
-                            <li>
+                            <li class="on">
                                 <h3><a href=""><i class='bx bx-dashboard'></i>대시보드</a></h3>
                                 <ul>
                                     <li><a href="">대시보드</a></li>
