--- a/login.html
+++ b/login.html
@@ -6,17 +6,17 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>infoCMS</title>
-        <link rel="stylesheet" type="text/css" href="css/style.css"/>
+        <link rel="stylesheet" type="text/css" href="source/css/style.css"/>
 
         <!-- javaScript -->
-        <script src="js/jquery-1.11.3.min.js"></script>
+        <script src="source/js/jquery-1.11.3.min.js"></script>
 
     </head>
 
     <body class="cmslogin">
 
         <video autoplay="autoplay" muted loop="loop" poster="images/background.png">
-            <source src="images/background.mp4" type="video/mp4">
+            <source src="/source/images/background.mp4" type="video/mp4">
         </video>
 
         <fieldset>
