--- a/login.html
+++ b/login.html
@@ -7,26 +7,38 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>infoCMS</title>
         <link rel="stylesheet" type="text/css" href="source/css/style.css"/>
+        <link rel="stylesheet" type="text/css" href="source/css/xeicon.css"/>
 
         <!-- javaScript -->
-        <script src="source/js/jquery-1.11.3.min.js"></script>
+
+        <script src="source/js/jquery-3.3.1.slim.min.js" ></script>
+        <script src="source/js/popper.min.js"></script>
+        <script src="source/js/bootstrap.min.js"></script>
+
+
+        <script src="source/js/common.js"></script>
 
     </head>
 
-    <body class="cmslogin">
 
-        <video autoplay="autoplay" muted loop="loop" poster="images/background.png">
-            <source src="/source/images/background.mp4" type="video/mp4">
-        </video>
-
-        <fieldset>
-            <legend class="sr-only">login form</legend>
-            <h1>infoCMS <small>Login</small></h1>
-            <label for="id">아이디</label><input id="id" name="id" type="text" placeholder="ID를 입력하세요">
-            <label for="passwd">비밀번호</label><input id="passwd" name="passwd" type="password" placeholder="비밀번호를 입력하세요">
-            <button>로그인</button>
-        </fieldset>
-
-    </body>
+    <body class="cmsLogin text-center">
+            <form class="form-signin">
+          <img class="mb-5" src="source/images/logo.svg" alt="" width="72" height="72">
+          <h1 class="sr-only">inCMS LOGIN</h1>
+          <label for="inputID" class="sr-only">Email address</label>
+          <input type="text" id="inputID" class="form-control" placeholder="ID를 입력하세요" required="" autofocus="">
+          <label for="inputPassword" class="sr-only">Password</label>
+          <input type="password" id="inputPassword" class="form-control" placeholder="비밀번호를 입력하세요" required="">
+          <div class="checkbox mb-3">
+            <label>
+              <input type="checkbox" value="remember-me"> 아이디 저장
+            </label>
+          </div>
+          <button class="btn btn-lg btn-primary btn-block" type="submit">LOGIN</button>
+          <p class="mt-5 mb-3 text-muted">© INFOMIND</p>
+        </form>
+        
+        
+        </body>
 
 </html>
