--- a/sub.html
+++ b/sub.html
@@ -238,7 +238,7 @@
                                             </div>
 
                                             <div class="col-xl-1">
-                                                <button type="submit" class="btn btn-primary btn-block btn-xl-inline">검색</button>
+                                                <button type="submit" class="btn btn-secondary btn-block btn-xl-inline">검색</button>
                                             </div>
 
                                         </div>
@@ -271,7 +271,7 @@
                                                         aria-label="아이디를 입력하세요"
                                                         aria-describedby="button-addon2">
                                                     <div class="input-group-append">
-                                                        <button class="btn btn-secondary" type="button" id="button-addon2">중복확인</button>
+                                                        <button class="btn btn-secondary" type="button" id="button-addon3">중복확인</button>
                                                     </div>
                                                 </div>
 
@@ -348,7 +348,7 @@
 
                                         <div class="form-row">
                                             <div class="form-group col-lg-6">
-                                                <label for="inputAddress">파일 업로드 #1</label>
+                                                <label for="inputGroupFile01">파일 업로드 #1</label>
                                                 <div class="input-group">
                                                     <div class="custom-file">
                                                         <input
@@ -364,15 +364,15 @@
 
                                         <div class="form-row">
                                             <div class="form-group col-lg-6">
-                                                <label for="inputAddress">파일 업로드 #2</label>
+                                                <label for="inputGroupFile02">파일 업로드 #2</label>
                                                 <div class="input-group">
                                                     <div class="custom-file">
                                                         <input
                                                             type="file"
                                                             class="custom-file-input"
-                                                            id="inputGroupFile01"
+                                                            id="inputGroupFile02"
                                                             aria-describedby="inputGroupFileAddon01">
-                                                        <label class="custom-file-label" for="inputGroupFile01">파일을 선택하세요</label>
+                                                        <label class="custom-file-label" for="inputGroupFile02">파일을 선택하세요</label>
                                                     </div>
                                                 </div>
                                             </div>
@@ -384,7 +384,12 @@
                                                 <label class="custom-control-label" for="customCheck1">Check this custom checkbox</label>
                                             </div>
                                         </div>
-                                        <button type="submit" class="btn btn-primary btn-block btn-xl-inline">Sign in</button>
+
+                                        <div class="row justify-content-center">
+                                            <div class="col-xl-3">
+                                                <button type="submit" class="btn btn-primary btn-lg btn-block">Sign in</button>
+                                            </div>
+                                        </div>
                                     </form>
 
                                     <!--// 내용 -->
