--- a/form.html
+++ b/form.html
@@ -160,6 +160,12 @@
             </nav>
             <!-- E:main_menu -->
 
+
+            <!-- S:footer -->
+            <p class="copyright">
+                © INFOMIND
+            </p>
+            <!-- E:footer -->
         </aside>
 
         <div id="content">
@@ -398,55 +404,12 @@
                         </div>
                         <!--// 일반컨텐츠 영역 -->
 
-                        <!-- 페이징 -->
-                        <div class="row">
-                            <nav class="mCenter" aria-label="Page navigation">
-                                <ul class="pagination">
-                                    <li class="page-item">
-                                        <a class="page-link" href="#" aria-label="Previous">
-                                            처음
-                                        </a>
-                                    </li>
-                                    <li class="page-item">
-                                        <a class="page-link" href="#" aria-label="Previous">
-                                            <i class='xi xi-angle-left'></i>
-                                        </a>
-                                    </li>
-                                    <li class="page-item">
-                                        <a class="page-link" href="#">1</a>
-                                    </li>
-                                    <li class="page-item active">
-                                        <a class="page-link" href="#">2</a>
-                                    </li>
-                                    <li class="page-item">
-                                        <a class="page-link" href="#">3</a>
-                                    </li>
-                                    <li class="page-item">
-                                        <a class="page-link" href="#" aria-label="Next">
-                                            <i class='xi xi-angle-right'></i>
-                                        </a>
-                                    </li>
-                                    <li class="page-item">
-                                        <a class="page-link" href="#" aria-label="Next">
-                                            맨끝
-                                        </a>
-                                    </li>
-                                </ul>
-                            </nav>
-
-                        </div>
-                        <!-- 페이징 -->
                     </div>
 
                 </div>
 
             </section>
 
-            <!-- S:footer -->
-            <footer id="footer">
-                © INFOMIND
-            </footer>
-            <!-- E:footer -->
         </div>
         <!-- E:mainContent -->
     </body>
