--- a/index.html
+++ b/index.html
@@ -157,22 +157,22 @@
                 <strong>Dashboard</strong>
                 main.html</a>
 
-                <a href="sub.html">
-                    <strong>서브페이지</strong>
-                    sub.html</a>
-                    
+            <a href="form.html">
+                <strong>서브 - FORM</strong>
+                form.html</a>
+
+            <a href="table.html">
+                <strong>서브 - TABLE</strong>
+                table.html</a>
+
         </div>
 
-        <!--<div>
-            <h2>THEME</h2>
+        <!--<div> <h2>THEME</h2> <a href="sub-theme-list.html"> <strong>리스트</strong>
+        sub-theme-list.html</a> -->
+    </div>
 
-            <a href="sub-theme-list.html">
-                <strong>리스트</strong>
-                sub-theme-list.html</a> -->
-        </div>
+    <p class="co">ⓒ INFOMIND</p>
 
-        <p class="co">ⓒ INFOMIND</p>
-
-    </body>
+</body>
 
 </html>
