--- a/table.html
+++ b/table.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ko">
 
     <head>
@@ -160,6 +160,7 @@
             </nav>
             <!-- E:main_menu -->
 
+
             <!-- S:footer -->
             <p class="copyright">
                 © INFOMIND
@@ -172,7 +173,7 @@
             <section class="view">
 
                 <h2 class="sTitle">
-                    <i class='xi xi-dashboard-o'></i>대시보드</h2>
+                    <i class='xi xi-dashboard-o'></i>Table</h2>
 
                 <nav class="navigation" aria-label="breadcrumb">
                     <ol class="breadcrumb">
@@ -189,40 +190,93 @@
                 <div class="contentsArea">
                     <div class="container">
 
-                        <div class="alert alert-danger alert-dismissible fade show" role="alert">
 
-                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                            <h4 class="alert-heading">고양이 여러분께 알립니다.</h4>
-                            야옹 야옹 야옹 냐아옹 냥냥 야옹 애옹
+                        <!-- 일반컨텐츠 영역 -->
+                        <div class="row">
+                            <div class="cbox col-xl-12" area-label="content area">
+                                <div class="inside">
+                                    <h3 class="bTitle">테이블</h3>
+                                    <!-- 내용 -->
 
-                        </div>
+                                    
+
+                                    <table class="table mb-0">
+                                        <thead class="thead-dark">
+                                          <tr>
+                                            <th scope="col">#</th>
+                                            <th scope="col">First</th>
+                                            <th scope="col">Last</th>
+                                            <th scope="col">Handle</th>
+                                          </tr>
+                                        </thead>
+                                        <tbody>
+                                          <tr>
+                                            <th scope="row">1</th>
+                                            <td>Mark</td>
+                                            <td>Otto</td>
+                                            <td>@mdo</td>
+                                          </tr>
+                                          <tr>
+                                            <th scope="row">2</th>
+                                            <td>Jacob</td>
+                                            <td>Thornton</td>
+                                            <td>@fat</td>
+                                          </tr>
+                                          <tr>
+                                            <th scope="row">3</th>
+                                            <td>Larry</td>
+                                            <td>the Bird</td>
+                                            <td>@twitter</td>
+                                          </tr>
+                                        </tbody>
+                                      </table>
+                                      
 
 
-                        <div class="row ">
-                            <div class="col-xl-8">
-                                <div class="widget shadowBox">
-                                    <h4 class="widgetTitle">제목입니다.</h4>
-                                    <div class="widgetContent">
-                                        sigkgk
-                                    </div>
-
+                                    <!--// 내용 -->
                                 </div>
                             </div>
-                            <div class=" col-xl-4">
-                                <div class="widget weather shadowBox">
-                                    <h4>
-                                        <strong>제주시</strong>날씨</h4>
-                                    <div class="big">
-                                        <i class="xi xi-snowy"></i>
-                                    </div>
-
-                                </div>
-                            </div>
                         </div>
+                        <!--// 일반컨텐츠 영역 -->
 
+                        <!-- 페이징 -->
+                        <div class="row">
+                            <nav class="mCenter" aria-label="Page navigation">
+                                <ul class="pagination">
+                                    <li class="page-item">
+                                        <a class="page-link" href="#" aria-label="Previous">
+                                            처음
+                                        </a>
+                                    </li>
+                                    <li class="page-item">
+                                        <a class="page-link" href="#" aria-label="Previous">
+                                            <i class='xi xi-angle-left'></i>
+                                        </a>
+                                    </li>
+                                    <li class="page-item">
+                                        <a class="page-link" href="#">1</a>
+                                    </li>
+                                    <li class="page-item active">
+                                        <a class="page-link" href="#">2</a>
+                                    </li>
+                                    <li class="page-item">
+                                        <a class="page-link" href="#">3</a>
+                                    </li>
+                                    <li class="page-item">
+                                        <a class="page-link" href="#" aria-label="Next">
+                                            <i class='xi xi-angle-right'></i>
+                                        </a>
+                                    </li>
+                                    <li class="page-item">
+                                        <a class="page-link" href="#" aria-label="Next">
+                                            맨끝
+                                        </a>
+                                    </li>
+                                </ul>
+                            </nav>
 
+                        </div>
+                        <!-- 페이징 -->
                     </div>
 
                 </div>
