--- a/dashboard.html
+++ b/dashboard.html
@@ -212,10 +212,54 @@
                             </div>
                             <div class=" col-xl-4">
                                 <div class="widget weather shadowBox">
-                                    <h4>
-                                        <strong>제주시</strong>날씨</h4>
-                                    <div class="big">
-                                        <i class="xi xi-snowy"></i>
+                                    <h4><strong>제주시</strong>날씨</h4>
+                                    <p><strong>23℃</strong>눈</p>
+                                        <div class="big">
+                                            <i class="xi xi-snowy"></i>
+                                        </div>
+
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div class="row ">
+                            <div class="col-xl-8">
+                                <div class="widget shadowBox">
+                                    <h4 class="widgetTitle">제목입니다.</h4>
+                                    <div class="widgetContent">
+                                        sigkgk
+                                    </div>
+
+                                </div>
+                            </div>
+                            <div class="col-xl-4">
+                                <div class="widget shadowBox">
+                                    <h4 class="widgetTitle">제목입니다.</h4>
+                                    <div class="widgetContent">
+                                        sigkgk
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <div class="row ">
+                            <div class="col-xl-6">
+                                <div class="widget shadowBox">
+                                    <h4 class="widgetTitle">제목입니다.</h4>
+                                    <div class="widgetContent">
+                                        sigkgk
+                                    </div>
+
+                                </div>
+                            </div>
+                            <div class="col-xl-6">
+                                <div class="widget shadowBox">
+                                    <h4 class="widgetTitle">제목입니다.</h4>
+                                    <div class="widgetContent">
+                                        sigkgk
                                     </div>
 
                                 </div>
