--- a/login.html
+++ b/login.html
@@ -30,7 +30,8 @@
           <label for="inputPassword" class="sr-only">Password</label>
           <input type="password" id="inputPassword" class="form-control" placeholder="비밀번호를 입력하세요" required="">
 
-          <div class="row mb-3">
+          
+          <!-- <div class="row mb-3">
             <label for="inputCode" class="sr-only">Password</label>
             <input type="text" id="inputCode" class="form-control col-7 is-invalid" placeholder="보안코드를 입력하세요" required="">
             <div class="codeImg col-5" role="alert">
@@ -40,7 +41,7 @@
             <div class="invalid-feedback">
               보안코드가 틀렸습니다
             </div>
-          </div>
+          </div> -->
           
           <div class="custom-control custom-checkbox mb-3">
             <input type="checkbox" class="custom-control-input" id="customCheck1">
