--- a/form.html
+++ b/form.html
@@ -170,6 +170,40 @@
 
         <div id="content">
 
+            <!-- tabs -->
+            <section class="tabs">
+                <ul class="nav nav-tabs">
+                <li class="nav-item col-4 col-xl-1">
+                    <a class="nav-link active" href="#">대시보드
+                    </a>
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                          </button>
+                </li>
+                <li class="nav-item col-4 col-xl-1">
+                    <a class="nav-link" href="#">App</a>
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                          </button>
+                </li>
+                <li class="nav-item col-4 col-xl-1">
+                    <a class="nav-link" href="#">UI Elements</a>
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                          </button>
+                </li>
+                <li class="nav-item col-4 col-xl-1">
+                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                          </button>
+                </li>
+                </ul>
+            </section>
+            <!--// tabs --->
+
+
+
             <section class="view">
 
                 <h2 class="sTitle">
