에러페이지 추가

--- a/index.html
+++ b/index.html
@@ -165,6 +165,10 @@
                 <strong>서브 - TABLE</strong>
                 table.html</a>
 
+                <a href="404.html">
+                    <strong>error</strong>
+                    404.html</a>
+
         </div>
 
         <!--<div> <h2>THEME</h2> <a href="sub-theme-list.html"> <strong>리스트</strong>
